# DES-Explorer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  cmakerun.sh  readme.md
include/: DES_Errors.hpp  DES_Explorer.hpp  Logger.hpp
include/utils/: FileReader.hpp
includes/: DES_Errors.hpp  DES_Explorer.hpp  DES_Types.hpp  Logger.hpp
includes/des/: errors.hpp  explorer.hpp  types.hpp
includes/des/interface/: terminal.hpp
includes/des/utils/: file_reader.hpp  folder_utils.hpp  logger.hpp
includes/utils/: FileReader.hpp  FolderUtils.hpp  Logger.hpp
src/: DES_Explorer.cpp  main.cpp
src/DES_Explorer/: DES_Explorer.cpp
src/DES_Explorer/utils/: FileReader.cpp  FolderUtils.cpp
src/core/: explorer.cpp
src/core/utils/: file_reader.cpp  folder_utils.cpp
